--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4063,16 +4063,16 @@ installed under @file{/opt/csw}.  You will need @acronym{GNU}
 @code{libiconv} and @code{readline}: the Solaris version of @code{iconv}
 is not sufficiently powerful.
 
-The native @command{make} suffices to build @R{} but a small number
-of packages require @acronym{GNU} @command{make}.
+The native @command{make} suffices to build @R{} but a small number of
+packages require @acronym{GNU} @command{make}.
 
 Some people have reported that the Solaris @code{libintl} needs to be
 avoided, for example by using @option{--disable-nls} or
 @option{--with-included-gettext} or using @code{libintl} from OpenCSW.
 
-When using the Sun compilers@footnote{including @command{gcc} for Sparc
-from Sun.} do @emph{not} specify @option{-fast}, as this disables
-@acronym{IEEE} arithmetic and @command{make check} will fail.
+When using the Oracle compilers@footnote{including @command{gcc} for
+Sparc from Oracle.} do @emph{not} specify @option{-fast}, as this
+disables @acronym{IEEE} arithmetic and @command{make check} will fail.
 
 For the Solaris Studio compilers a little juggling of paths was needed to
 ensure @acronym{GNU} @code{libiconv} is used rather than the Solaris
@@ -4105,7 +4105,7 @@ standard (appendix F 8.9) on the return values of functions such as
 been reported on @cputype{amd64} if @option{-xc99} is omitted.
 
 You can target specific Sparc architectures for (slightly) higher
-performance: Sun recommend
+performance: Oracle recommend
 
 @example
 @r{32-bit:} -xtarget=ultra3 -xarch=v8plusa
@@ -4147,9 +4147,9 @@ CXXFLAGS="-features=tmplrefstatic"
 @cindex BLAS library
 @cindex LAPACK library
 
-The Sun performance library @code{libsunperf} is available for use with
-the Solaris Studio compilers.  If selected as a @acronym{BLAS}, it must also be
-selected as LAPACK via
+The performance library @code{libsunperf} is available for use with the
+Solaris Studio compilers.  If selected as a @acronym{BLAS}, it must also
+be selected as LAPACK via
 
 @example
 ./configure --with-blas=sunperf --with-lapack
@@ -4206,12 +4206,13 @@ be in the
 @env{LD_LIBRARY_PATH} during configuration.
 
 Tests with @command{gcc}@footnote{specifically @command{gcc}@tie{}4.3.3
-from OpenCSW.} on @cputype{x86} and @cputype{amd64} have been less
-successful: @cputype{x86} builds have failed on tests using complex
-arithmetic@footnote{such as those of @code{fft}: these can often be
-resolved by turning off optimization}, whereas on @cputype{amd64} the
-builds have failed to complete in several different ways, most recently
-with relocation errors for @file{libRblas.so}.
+and @command{gcc}@tie{}3.4.6 from OpenCSW.} on @cputype{x86} and
+@cputype{amd64} have been less successful: @cputype{x86} builds have
+failed on tests using complex arithmetic@footnote{such as those of
+@code{fft}: these can often be resolved by turning off optimization},
+whereas on @cputype{amd64} the builds have failed to complete in several
+different ways, most recently with relocation errors for
+@file{libRblas.so}.
 
 
 @node AIX, Cygwin, Solaris, Platform notes
