--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4145,7 +4145,7 @@ be selected as LAPACK via
 @noindent
 This has often given test failures in the past, in several different
 places.  For @R{} 2.12.0, it fails in @file{tests/reg-tests-1b.R} in the
-BLAS test, and on some builds such as @cputype{amd64} is fails in
+BLAS test, and on some builds such as @cputype{amd64} it fails in
 @code{example(eigen)}.
 
 
