--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4032,9 +4032,10 @@ LIBS=-L/usr/X11/lib
 there has been some success with
 @command{gcc}@tie{}4/@command{gfortran}, mainly on Sparc.  Sun packages
 for @R{} used to be available from @uref{http://www.sunfreeware.com/}
-for both architectures, but have not been updated recently.  (Recent Sun
-machines are AMD Opterons or Intel Xeons (@cputype{amd64}) rather than
-@cputype{x86}, but 32-bit @cputype{x86} executables are the default.)
+for both architectures, but recently have often been several versions
+old.  (Recent Sun machines are AMD Opterons or Intel Xeons
+(@cputype{amd64}) rather than @cputype{x86}, but 32-bit @cputype{x86}
+executables are the default.)
 
 There are also reports of success on OpenSolaris (also known as Solaris
 Express Community Edition, and sometimes as Solaris 11) on
@@ -4048,16 +4049,16 @@ path.  Also, a version of the preferred @acronym{GNU} @command{tar} is
 @command{makeinfo}.
 
 It is necessary to avoid the tools in @file{/usr/ucb}: in particular
-@file{/usr/ucb/tr} causes @command{R CMD Rdiff} to malfunction.
+@file{/usr/ucb/tr} has caused @command{R CMD Rdiff} to malfunction.
 @command{configure} looks for a POSIX-compliant @command{tr}, e.g. in
 @file{/usr/xpg4/bin}.
 
-Modern Solaris systems allow a large selection of Open Source software
-to be installed from @url{http://www.opencsw.org} (and also
-@url{http://www.blastwave.org}) via @command{pkg-get}, by default
-installed under @file{/opt/csw}.  You will need @acronym{GNU}
-@code{libiconv} and @code{readline}: the Solaris version of @code{iconv}
-is not sufficiently powerful.
+A large selection of Open Source software can be installed from
+@url{http://www.opencsw.org} (and also @url{http://www.blastwave.org})
+via @command{pkg-get}, by default installed under @file{/opt/csw}.
+
+You will need @acronym{GNU} @code{libiconv} and @code{readline}: the
+Solaris version of @code{iconv} is not sufficiently powerful.
 
 The native @command{make} suffices to build @R{} but a small number of
 packages require @acronym{GNU} @command{make}.
@@ -4084,6 +4085,7 @@ CXX="CC -library=stlport4"
 CXXFLAGS=-O
 FC=f95
 FCFLAGS=$FFLAGS
+FCLIBS=-lfai -lfsu
 LDFLAGS=-L/opt/csw/lib
 @end example
 
@@ -4154,8 +4156,8 @@ be selected as LAPACK via
 @noindent
 This has often given test failures in the past, in several different
 places.  For @R{} 2.12.0, it fails in @file{tests/reg-tests-1b.R} in the
-BLAS test, and on some builds such as @cputype{amd64} it fails in
-@code{example(eigen)}.
+BLAS test, and on some builds, including for @cputype{amd64}, it fails
+in @code{example(eigen)}.
 
 
 @menu
