--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4050,7 +4050,8 @@ You will need @acronym{GNU} @code{libiconv} and @code{readline}: the
 Solaris version of @code{iconv} is not sufficiently powerful.
 
 The native @command{make} suffices to build @R{} but a small number of
-rogue packages require @acronym{GNU} @command{make}.
+rogue packages require @acronym{GNU} @command{make} (many without
+declaring it as @samp{SystemRequirements} in the @file{DESCRIPTION} file).
 
 Some people have reported that the Solaris @code{libintl} needs to be
 avoided, for example by using @option{--disable-nls} or
