--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4051,7 +4051,7 @@ path.  Also, a version of the preferred @acronym{GNU} @command{tar} is
 It is necessary to avoid the tools in @file{/usr/ucb}: in particular
 @file{/usr/ucb/tr} has caused @command{R CMD Rdiff} to malfunction.
 @command{configure} looks for a POSIX-compliant @command{tr}, e.g. in
-@file{/usr/xpg4/bin}.
+@file{/usr/xpg4/bin} and @file{/usr/xpg6/bin}.
 
 A large selection of Open Source software can be installed from
 @url{http://www.opencsw.org} (and also @url{http://www.blastwave.org})
@@ -4061,7 +4061,8 @@ You will need @acronym{GNU} @code{libiconv} and @code{readline}: the
 Solaris version of @code{iconv} is not sufficiently powerful.
 
 The native @command{make} suffices to build @R{} but a small number of
-packages require @acronym{GNU} @command{make}.
+rogue packages require @acronym{GNU} @command{make} (many without
+declaring it as @samp{SystemRequirements} in the @file{DESCRIPTION} file).
 
 Some people have reported that the Solaris @code{libintl} needs to be
 avoided, for example by using @option{--disable-nls} or
