separate out the BLAS regression tests
git-svn-id: https://svn.r-project.org/R/trunk@53588 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4040,7 +4040,7 @@ path.  Also, a version of the preferred @acronym{GNU} @command{tar} is
 @command{makeinfo}.  It may be necessary to avoid the tools in
 @file{/usr/ucb}: in particular @file{/usr/ucb/tr} has caused problems in
 the past.  POSIX-compilant versions of some tools can be found in
-@file{/usr/xpg4/bin} and @file{/usr/xpg6/bin}
+@file{/usr/xpg4/bin} and @file{/usr/xpg6/bin}.
 
 A large selection of Open Source software can be installed from
 @url{http://www.opencsw.org} (and also @url{http://www.blastwave.org})
