--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2679,10 +2679,10 @@ Roman and Courier New, and contain fonts rather similar to the first two
 
 The bitmapped graphics devices @code{jpeg()}, @code{png()} and
 @code{tiff()} need the appropriate headers and libraries installed:
-@code{jpeg} (version 6b or later) or @code{libpng} (version 1.2.3 or
-later, including 1.4.x) and @code{zlib} (version 1.1.3 or later) or
-@code{libtiff} (any recent version of 3.x.y -- 3.8.2 and 3.9.[124] have been
-tested) respectively.
+@code{jpeg} (version 6b or later, or @code{libjpeg-turbo}) or
+@code{libpng} (version 1.2.3 or later, including 1.4.x) and @code{zlib}
+(version 1.1.3 or later) or @code{libtiff} (any recent version of 3.x.y
+-- 3.8.2 and 3.9.[124] have been tested) respectively.
 
 If you have them installed (including the appropriate headers and of
 suitable versions), @code{zlib}, @code{libbz2} and PCRE will be used if
