--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1189,19 +1189,8 @@ $(R_HOME)/bin$(R_ARCH_BIN)/Rscript -e '@var{R expression}'
 where @code{$(R_ARCH_BIN)} is only needed currently on Windows.
 
 Environment or make variables can be used to select different macros for
-32- and 64-bit code, for example (GNU syntax, allowed on Windows)
-
-@example
-ifeq "$@{R_ARCH@}" "/x64"
-PKG_LIBS = @var{value for 64-bit Windows}
-else
-PKG_LIBS = @var{value for 32-bit Windows}
-endif
-@end example
-
-@noindent
-To make this simpler, as from @R{} 2.11.1 (but not in @R{} 2.11.0) you
-can use
+32- and 64-bit code, for example (as from @R{} 2.11.1, GNU syntax,
+allowed on Windows)
 
 @example
 ifeq "$(WIN)" "64"
@@ -1214,8 +1203,9 @@ endif
 On Windows there is normally a choice between linking to an import
 library or directly to a DLL.  Where possible, the latter is much more
 reliable: import libraries are tied to a specific toolchain, and in
-particular on 64-bit Windows two different conventions are common, and
-@R{} 2.11.x and 2.12.x use different ones.  So for example instead of
+particular on 64-bit Windows two different conventions have been
+commonly used and @R{} 2.11.x and 2.12.x used different ones.  So for
+example instead of
 
 @example
 PKG_LIBS = -L$(XML_DIR)/lib -lxml2
@@ -2501,6 +2491,17 @@ inclusions (@code{ifeq} and the like), @code{$@{shell ...@}} and
 the use of @code{$<} other than in implicit rules is a GNU extension.
 Unfortunately makefiles which use GNU extensions often run on other
 platforms but do not have the intended results.
+
+The use of @code{$@{shell ...@}} can be avoided by using backticks, e.g.@:
+
+@example
+PKG_CFLAGS = `gsl-config --cflags`
+@end example
+
+@noindent
+which works in all versions of @command{make} known@footnote{GNU make,
+BSD make as in FreeBSD and @command{bsdmake} on Darwin, AT&T make as
+implemented on Solaris.} to be used with @R{}.
 
 If you really must assume GNU make, declare it in the @file{DESCRIPTON}
 file by
