--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -3290,15 +3290,19 @@ particular, functions) are given in this subsection.
 @table @code
 @item \name@{@var{name}@}
 @findex \name
-@var{name} typically@footnote{There can be exceptions: for example @file{Rd}
-files are not allowed to start with a dot, and have to be uniquely named
-on a case-insensitive file system.} is the basename of the @file{Rd} file
-containing the documentation.  It is the ``name'' of the @file{Rd} object
-represented by the file and has to be unique in a package.  To avoid
-problems with indexing the package manual, it may not contain @samp{!}
-@samp{|} nor @samp{@@}.  (@LaTeX{} special characters are allowed, but
-may not be collated correctly in the index.)  There can only be one
-@code{\name} entry in a file, and it must not contain any markup.
+@var{name} typically@footnote{There can be exceptions: for example
+@file{Rd} files are not allowed to start with a dot, and have to be
+uniquely named on a case-insensitive file system.} is the basename of
+the @file{Rd} file containing the documentation.  It is the ``name'' of
+the @file{Rd} object represented by the file and has to be unique in a
+package.  To avoid problems with indexing the package manual, it may not
+contain @samp{!}  @samp{|} nor @samp{@@}.  (@LaTeX{} special characters
+are allowed, but may not be collated correctly in the index.)  There can
+only be one @code{\name} entry in a file, and it must not contain any
+markup.  Entries in the package manual will be in alphabetic@footnote{in
+the current locale, and with special treatment for @LaTeX{} special
+characters and with any @samp{@var{pkgname}-package} topic moved to
+the top of the list.} order of the @code{\name} entries.
 
 @item \alias@{@var{topic}@}
 @findex \alias
