mention that 64-bit Windows is needed to build 64-bit R
git-svn-id: https://svn.r-project.org/R/trunk@53917 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -920,7 +920,10 @@ Windows @acronym{FAQ}} for more details on the binary installer.
 @node Building from source, Testing a Windows Installation, Installing R under Windows, Installing R under Windows
 @section Building from source
 
-@R{} can be built as either a 32-bit or 64-bit application on Windows.
+@R{} can be built as either a 32-bit or 64-bit application on Windows:
+to build the 64-bit application you need a 64-bit edition of Windows:
+such an OS can also be used to build 32-bit \R.
+
 The standard installer combines 32-bit and 64-bit builds into a single
 executable which can then be installed into the same location and share
 all the files except the @file{.exe} and @file{.dll} files and some
